<resources>
    <string name="app_name">ND Business Card</string>
    <string name="circle">Rounded corners.</string>
    <string name="face">My face...</string>
    <string name="bg">Background Color</string>
    <string name="name">Tomas Forsman Dev.</string>
    <string name="bg_light">Light Background Color</string>
    <string name="my_name">Tomas Forsman</string>
    <string name="email">tomas@tomasforsman.com</string>
    <string name="mobile">+46 70 123 58 99</string>
    <string name="call">Call</string>
</resources>
